--- a/home.html
+++ b/home.html
@@ -18,15 +18,50 @@
 				<li><a href="tips.html">Travel Tips</a></li>
 		</nav>
 		<main>
-			<section id="info">
+			<section class="introduction">
 				<h2>Bergamo is a beautiful walled city located 37 miles (60 km) from Milan. Its short distance from the capital of Lombardy makes it the ideal one day. You can even make the most of your Ryanair flight to this city, to explore it before heading to Milan. The upper town is a maze of narrow alleyways packed with charming stores.</h2>
 			</section>
-			<section>
-				<img src="media/bergamo.webp">
+			<section id="front">
+				<!-- img from: https://static.nationalgeographic.co.uk/files/styles/image_3200/public/bergamo_gettyimages-158875721_hr.webp?w=768&h=432 -->
+				<img src="media/bergamo.webp" alt="main image">
 			</section>
-			<section id="review">
-				review
+			<section id="description">
+				<!-- Text taken from: https://www.visitbergamo.net/en/bergamo-city/ -->
+				<p>Come explore it by walking across its historic districts, its churches, its funiculars and its walkways climbing up through the lush vegetation of the Hills Park and let yourself be enchanted by the surprising views of the flatland and the mountains.
+				</p>
+				<p>Bergamo is the birthplace of Donizetti, one of the world’s five greatest opera composers: you can trace the life of this XIX Century musician starting from his native house in Upper Bergamo, admiring his mementos at the Museo Donizettiano, at his grave in the Santa Maria Maggiore Basilica and at the city theatre, which was named after him: every season Donizetti’s greatest successes are performed and praised right here.
+				</p>
+				<p>From music to art masterpieces, such as Botticelli’s, Mantegna’s, Bellini’s and Raphael’s: you can find these masters here in the halls of Accademia Carrara Picture Gallery, housing one of Europe’s most outstanding collections of the Italian Renaissance.
+				</p>
+				<p>You can discover the amazing works by Moroni, the XVI Century genius of portrait from Bergamo, whose pieces are exhibited in the world’s major museums, along with the masterpieces by Lorenzo Lotto, who gave Bergamo some precious works of art, altarpieces and wooden inlays with mysterious subjects.
+				</p>
+				<p>Art and history come together in this ancient city: the medieval Upper Bergamo, surrounded by walls and crossed by countless cobblestone alleys, holds numerous roman ruins, Renaissance churches, XVIII Century palaces ad neoclassical façades overlooking its famous Piazza Vecchia, located just a few steps away from the main museums.
+				</p>
+				<p>On the other side, the core of Lower Bergamo is the highest expression of XX and XXI Centuries, from the GAMeC – the Gallery of Modern and Contemporary Art – to the Sentierone promenade, the most popular place for Bergamo’s citizens to go to take a stroll, built where the old Exhibition Ground used to be: here you can find some beautiful buildings dating back to the last Century and created by today’s most renowned architects.
+				</p>
+				<p>Surrounded by historical boroughs, the city centre is the best place to go shopping and have some fun, enjoying a coffee and taking a break before deciding what to do among festivals, cultural events, concerts and shows. Bergamo is a dynamic and bustling city even in the evening: come enjoy an “aperitivo” before having dinner in one of its best restaurants and try a “casoncelli” pasta dish, the most famous local food.
+				</p>
+				<p>9 PDO cheeses, cold cuts, excellent wines and traditional recipes: these are a few examples from the rich gastronomic offer of Bergamo and its territory. Go explore the food, the culture and the nature of the province, where rivers, valleys, flatland and mountains create the perfect background for the Upper Town’s unique skyline.
+				</p>
 			</section>
+			<footer>
+				<section>
+					<div id="review">
+						<div id="reviewtitle">Romantic Guide to Bergamo<div>
+						<p id="rewname">by Dana B</p>
+						<img src="media/dana-b.jpg" alt="profile image">
+						<p id="rewtext">"Ideally located just 15 minutes away from one of the busiest airports in Italy, Bergamo is the perfect getaway to be featured in a tender romance novel. Once surrounded by the Venetian walls of the upper city, you will find yourself hard-pressed..."</p>
+						
+					</div>
+					<div id="review">
+						<div id="reviewtitle">Romantic Guide to Bergamo<div>
+						<p id="rewname">by Scott K</p>
+						<img src="media/scott.jpg" alt="profile image">
+						<p id="rewtext">"With authenticity being such a rare commodity in a world of fast lanes, cosmopolitanism, and international fast-food chains; the picturesque medieval town of Bergamo is a real gem. We are going to embark on a journey of discovery, in a quest to uncov..."</p>
+						
+					</div>
+				</section>
+			</footer>
 		</main>
 	</div>
 </body>
